Fetches jenkins job information using fetch and requirejs

--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,10 @@
-<!DOCTYPE  html>
+<!DOCTYPE html>
 <html>
 	<head>
 		<title>Jenkins Dashboard</title>
 	</head>
 	<body>
-		<h1>Jenkins Dashboard</h1>
+		<h1>Jenkins Dashboard 3</h1>
+        <script data-main="app" src="lib/require.js"></script>
 	</body>
 </html>
