Outputs fetch result in page using jquery

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,8 @@
 	</head>
 	<body>
 		<h1>Jenkins Dashboard 3</h1>
+        <div id="content"></div>
+        <div id="error"></div>
         <script data-main="app" src="lib/require.js"></script>
 	</body>
 </html>
