Adds styles and basic pipeline view

--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>Jenkins Dashboard</title>
+        <link rel="stylesheet" href="main.css" />
         <script src="node_modules/systemjs/dist/system.js"></script>
         <script src="systemjs.config.js"></script>
         <script>
@@ -9,8 +10,7 @@
         </script>
 	</head>
 	<body>
-		<h1>Jenkins Dashboard 3</h1>
-        <div id="content"></div>
-        <div id="error"></div>
+        <h1 id="duration"></h1>
+        <div id="pipeline"></div>
 	</body>
 </html>
