--- a/src/index.html
+++ b/src/index.html
@@ -8,5 +8,6 @@
 	<body>
         <h1 id="duration"></h1>
         <div id="pipeline"></div>
+        <pipeline-view></pipeline-view>
 	</body>
 </html>
