Extracts duration into DurationView

--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,7 @@
         <script src="app/main.js" type="module"></script>
 	</head>
 	<body>
-        <h1 id="duration"></h1>
-        <div id="pipeline"></div>
+        <duration-view></duration-view>
         <pipeline-view></pipeline-view>
 	</body>
 </html>
