--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,6 @@
         <script src="app/main.js" type="module"></script>
 	</head>
 	<body>
-        <duration-view></duration-view>
-        <pipeline-view></pipeline-view>
+        <app-view></app-view>
 	</body>
 </html>
