--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,6 @@
         <script src="app/main.js" type="module"></script>
 	</head>
 	<body>
-        <app-view></app-view>
+        <app-view pipeline="job/coop.mws.pipeline/job/default/"></app-view>
 	</body>
 </html>
