Passes pipeline through hash in URL

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,6 @@
         <script src="app/main.js" type="module"></script>
 	</head>
 	<body>
-        <dashboard-view pipeline="job/coop.mws.pipeline/job/default/"></dashboard-view>
+        <dashboards-view></dashboards-view>
 	</body>
 </html>
